Fix style for drop-off location on mobile devices
Issue: CS-387

--- a/src/views/css/checkout.css
+++ b/src/views/css/checkout.css
@@ -125,3 +125,13 @@
     transform: rotate(360deg);
   }
 }
+
+@media screen and (max-width: 800px) {
+  .pl-close-modal {
+    right: -30px;
+    top: -30px;
+    width: 30px;
+    height: 30px;
+    line-height: 30px;
+  }
+}
